--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "blisspalaceland",
-	"short_name": "blisspalaceland",
+	"name": "BlisspalaceNEW",
+	"short_name": "BlisspalaceNEW",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "any",
